--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
 
 
 <!-- Awal Jumbotron -->
+
 <section class="jumbotron text-center">
   <img src="Img\emi.jpg" alt="Cemtur" width="200" class="rounded-circle img-thumbnail">
  <h1 class="display-4 fw-bold p-1">Yulius Cemtur </h1>
- <p class="lead fw-bold ">I'm student</p>
+ <p class="lead">I’m a Designer, Illustrator, Photographer, Videographer, and Creator of Courses.</p>
 
  <div class="container text-center">
     <a href="https://www.youtube.com/@cemtur"><i class="fa-brands fa-youtube" style="color: #000000;"></i></a>
@@ -77,13 +78,13 @@
 <div class="container">
  <div class="row text-center mb-2">
  <div class="class">
- <h2><font color="#ffffff">About Me</font></h2>
+ <h2 class="fw-bold"><font color="#ffffff">About Me</font></h2>
  </div>
  </div>
 
  <div class="row justify-content-center fs-5 text-center">
  <div class="col-9">
-  <p><font color="#ffffff">Yulius Cemtur adalah seorang Desain Grafis yang tinggal di Bogor, salah satu kota paling padat di Indonesia. Dia berasal dari Asmat, Papua Selatan, dia memulai desain grafis pertamanya pada tahun 2019, sebagian besar desain yang dilakukan dengan mencampur pemotretan nyata. Dia melakukan Desain dan Fotografi.</font></p>
+  <p><font color="#ffffff">Yulius Cemtur is a Graphic Designer who lives in Bogor, one of the most densely populated cities in Indonesia. He comes from Asmat, South Papua, he started his first graphic design in 2019, and most of the designs are done by mixing real images. He does Design and Photography.</font></p>
  </div>
 </div>
 
@@ -96,7 +97,7 @@
  <div class="container">
  <div class="row text-center mb-5">
  <div class="col">
- <h2>My Projects</h2>
+ <h2 class="fw-bold">My Projects</h2>
  </div>
  </div>
  <div class="row justify-content-center">
@@ -158,7 +159,7 @@
  <div class="container">
  <div class="row text-center mb-3">
  <div class="col">
- <h2><font color="ffffff">Contact Me</font></h2>
+ <h2 class="fw-bold"><font color="ffffff">Contact Me</font></h2>
  </div>
  </div>
        <div class="row justify-content-center">
