--- a/index.html
+++ b/index.html
@@ -61,15 +61,17 @@
  <p class="lead">I’m a Designer, Illustrator, Photographer, Videographer, and Creator of Courses.</p>
 
  <div class="container text-center">
-    <a href="https://www.youtube.com/@cemtur"><i class="fa-brands fa-youtube" style="color: #000000;"></i></a>
-    <a href="#"><i class="fa-brands fa-instagram"style="color: #000000;"></i></a>
-    <a href="https://cemturpits.github.io"><i class="fa-brands fa-dribbble"style="color: #000000;"></i></a>
+    <a href="#"><i class="fa-brands fa-instagram"style="color: #212529;"></i></a>
+    <a href="https://cemturpits.github.io"><i class="fa-brands fa-linkedin"style="color: #212529;"></i></a>
+    <a href="https://cemturpits.github.io"><i class="fa-brands fa-twitter"style="color: #212529;"></i></a>
+    <a href="https://www.youtube.com/@cemtur"><i class="fa-brands fa-youtube" style="color: #212529;"></i></a>
+    <a href="https://cemturpits.github.io"><i class="fa-brands fa-dribbble"style="color: #212529;"></i></a>
   </div>
 
  <!-- Link CV -->
  <a class="btn btn-dark" href="https://drive.google.com/file/d/1BsZaJ-cbFi_IXUuOuW70AXbtkOt6GI7q/view?usp=sharing" role="button">Dowload CV</a>
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000000" fill-opacity="1" d="M0,64L48,90.7C96,117,192,171,288,197.3C384,224,480,224,576,234.7C672,245,768,267,864,256C960,245,1056,203,1152,186.7C1248,171,1344,181,1392,186.7L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#212529" fill-opacity="1" d="M0,64L48,90.7C96,117,192,171,288,197.3C384,224,480,224,576,234.7C672,245,768,267,864,256C960,245,1056,203,1152,186.7C1248,171,1344,181,1392,186.7L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
 </section>
 <!-- Akhir Jumbotron -->
 
@@ -89,7 +91,7 @@
 </div>
 
 </section>
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000000" fill-opacity="1" d="M0,64L48,90.7C96,117,192,171,288,197.3C384,224,480,224,576,234.7C672,245,768,267,864,256C960,245,1056,203,1152,186.7C1248,171,1344,181,1392,186.7L1440,192L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#212529" fill-opacity="1" d="M0,64L48,90.7C96,117,192,171,288,197.3C384,224,480,224,576,234.7C672,245,768,267,864,256C960,245,1056,203,1152,186.7C1248,171,1344,181,1392,186.7L1440,192L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
 <!-- Akhir Aboute -->
 
 <!-- Awal Projek -->
@@ -148,7 +150,7 @@
 
 </div>
  </section>
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000000" fill-opacity="1" d="M0,64L48,90.7C96,117,192,171,288,197.3C384,224,480,224,576,234.7C672,245,768,267,864,256C960,245,1056,203,1152,186.7C1248,171,1344,181,1392,186.7L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#212529" fill-opacity="1" d="M0,64L48,90.7C96,117,192,171,288,197.3C384,224,480,224,576,234.7C672,245,768,267,864,256C960,245,1056,203,1152,186.7C1248,171,1344,181,1392,186.7L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
 <!-- Akhir Projek -->
 
 
@@ -183,7 +185,7 @@
        </div>
  </div>
  </section>
- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000000" fill-opacity="1" d="M0,64L48,90.7C96,117,192,171,288,197.3C384,224,480,224,576,234.7C672,245,768,267,864,256C960,245,1056,203,1152,186.7C1248,171,1344,181,1392,186.7L1440,192L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+ <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#212529" fill-opacity="1" d="M0,64L48,90.7C96,117,192,171,288,197.3C384,224,480,224,576,234.7C672,245,768,267,864,256C960,245,1056,203,1152,186.7C1248,171,1344,181,1392,186.7L1440,192L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
  <!-- Akhir contact -->
 
 
