--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body id="home">
 
     <!--Awal navbar -->
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow p-3 mb-5 rounded fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">Cemtur</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
