--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <!-- Akhir Jumbotron -->
 
 <!-- Awal aboute -->
-<section class="About p-5" id="About"> 
+<section class="About p-5 bg-dark" id="About"> 
 <div class="container">
  <div class="row text-center mb-2">
  <div class="class">
@@ -157,7 +157,7 @@
 
 
 <!-- Awal contact -->
-<section class="contact p-5" id="contact">
+<section class="contact p-5 bg-dark" id="contact">
  <div class="container">
  <div class="row text-center mb-3">
  <div class="col">
@@ -179,7 +179,7 @@
        <label for="pesan" class="form-label"><font color="ffffff">Pesan</font></label>
        <textarea class="form-control" id="pesan" rows="3"></textarea>
        </div>
-       <button type="submit" class="btn btn-dark"><font color="ffffff">Kirim</font></button>
+       <button type="submit" class="btn btn-dark shadow mb-3"><font color="ffffff">Kirim</font></button>
        </form>
        </div>
        </div>
